build_log_libc.txt
gcc -m32 -ffreestanding -fno-pie -nostdlib -nostdinc -Wall -Wextra -mno-sse -mno-sse2 -mno-mmx -mno-80387 -I./kernel/include -I./kernel -I./kernel/include/libc_shim -I./games/DOOM-master/linuxdoom-1.10 -DDOOM_MITHL -DNORMALUNIX=1 -DLINUX=1 -std=gnu89 -c kernel/apps/doom/libc_doom.c -o kernel/apps/doom/libc_doom.o
kernel/apps/doom/libc_doom.c: In function ‘fopen’:
kernel/apps/doom/libc_doom.c:20:5: error: ‘for’ loop initial declarations are only allowed in C99 or C11 mode
   20 |     for (uint32_t i = 0; i < boot_info.mod_count; i++) {
      |     ^~~
kernel/apps/doom/libc_doom.c:20:5: note: use option ‘-std=c99’, ‘-std=gnu99’, ‘-std=c11’ or ‘-std=gnu11’ to compile your code
kernel/apps/doom/libc_doom.c:53:39: warning: implicit declaration of function ‘kmalloc’; did you mean ‘malloc’? [-Wimplicit-function-declaration]
   53 |              MEM_FILE *f = (MEM_FILE*)kmalloc(sizeof(MEM_FILE));
      |                                       ^~~~~~~
      |                                       malloc
kernel/apps/doom/libc_doom.c:16:47: warning: unused parameter ‘mode’ [-Wunused-parameter]
   16 | FILE *fopen(const char *filename, const char *mode) {
      |                                   ~~~~~~~~~~~~^~~~
kernel/apps/doom/libc_doom.c: In function ‘fclose’:
kernel/apps/doom/libc_doom.c:65:5: warning: implicit declaration of function ‘kfree’; did you mean ‘free’? [-Wimplicit-function-declaration]
   65 |     kfree(stream);
      |     ^~~~~
      |     free
kernel/apps/doom/libc_doom.c: In function ‘fseek’:
kernel/apps/doom/libc_doom.c:86:19: error: ‘SEEK_SET’ undeclared (first use in this function)
   86 |     if (whence == SEEK_SET) {
      |                   ^~~~~~~~
kernel/apps/doom/libc_doom.c:86:19: note: each undeclared identifier is reported only once for each function it appears in
kernel/apps/doom/libc_doom.c:88:26: error: ‘SEEK_CUR’ undeclared (first use in this function)
   88 |     } else if (whence == SEEK_CUR) {
      |                          ^~~~~~~~
kernel/apps/doom/libc_doom.c:90:26: error: ‘SEEK_END’ undeclared (first use in this function)
   90 |     } else if (whence == SEEK_END) {
      |                          ^~~~~~~~
kernel/apps/doom/libc_doom.c: In function ‘rename’:
kernel/apps/doom/libc_doom.c:106:24: warning: unused parameter ‘old’ [-Wunused-parameter]
  106 | int rename(const char *old, const char *new) { return -1; }
      |            ~~~~~~~~~~~~^~~
kernel/apps/doom/libc_doom.c:106:41: warning: unused parameter ‘new’ [-Wunused-parameter]
  106 | int rename(const char *old, const char *new) { return -1; }
      |                             ~~~~~~~~~~~~^~~
kernel/apps/doom/libc_doom.c: In function ‘remove’:
kernel/apps/doom/libc_doom.c:107:24: warning: unused parameter ‘pathname’ [-Wunused-parameter]
  107 | int remove(const char *pathname) { return -1; }
      |            ~~~~~~~~~~~~^~~~~~~~
kernel/apps/doom/libc_doom.c: In function ‘putchar’:
kernel/apps/doom/libc_doom.c:108:22: warning: implicit declaration of function ‘console_write_char’; did you mean ‘console_write_len’? [-Wimplicit-function-declaration]
  108 | int putchar(int c) { console_write_char(c); return c; }
      |                      ^~~~~~~~~~~~~~~~~~
      |                      console_write_len
kernel/apps/doom/libc_doom.c: In function ‘sscanf’:
kernel/apps/doom/libc_doom.c:110:24: warning: unused parameter ‘str’ [-Wunused-parameter]
  110 | int sscanf(const char *str, const char *format, ...) { return 0; } // Stub
      |            ~~~~~~~~~~~~^~~
kernel/apps/doom/libc_doom.c:110:41: warning: unused parameter ‘format’ [-Wunused-parameter]
  110 | int sscanf(const char *str, const char *format, ...) { return 0; } // Stub
      |                             ~~~~~~~~~~~~^~~~~~
kernel/apps/doom/libc_doom.c: In function ‘open’:
kernel/apps/doom/libc_doom.c:111:22: warning: unused parameter ‘pathname’ [-Wunused-parameter]
  111 | int open(const char *pathname, int flags) { return -1; }
      |          ~~~~~~~~~~~~^~~~~~~~
kernel/apps/doom/libc_doom.c:111:36: warning: unused parameter ‘flags’ [-Wunused-parameter]
  111 | int open(const char *pathname, int flags) { return -1; }
      |                                ~~~~^~~~~
kernel/apps/doom/libc_doom.c: In function ‘close’:
kernel/apps/doom/libc_doom.c:112:15: warning: unused parameter ‘fd’ [-Wunused-parameter]
  112 | int close(int fd) { return 0; }
      |           ~~~~^~
kernel/apps/doom/libc_doom.c: In function ‘lseek’:
kernel/apps/doom/libc_doom.c:113:16: warning: unused parameter ‘fd’ [-Wunused-parameter]
  113 | long lseek(int fd, long offset, int whence) { return 0; }
      |            ~~~~^~
kernel/apps/doom/libc_doom.c:113:25: warning: unused parameter ‘offset’ [-Wunused-parameter]
  113 | long lseek(int fd, long offset, int whence) { return 0; }
      |                    ~~~~~^~~~~~
kernel/apps/doom/libc_doom.c:113:37: warning: unused parameter ‘whence’ [-Wunused-parameter]
  113 | long lseek(int fd, long offset, int whence) { return 0; }
      |                                 ~~~~^~~~~~
kernel/apps/doom/libc_doom.c: In function ‘read’:
kernel/apps/doom/libc_doom.c:114:14: warning: unused parameter ‘fd’ [-Wunused-parameter]
  114 | int read(int fd, void *buf, size_t count) { return 0; }
      |          ~~~~^~
kernel/apps/doom/libc_doom.c:114:24: warning: unused parameter ‘buf’ [-Wunused-parameter]
  114 | int read(int fd, void *buf, size_t count) { return 0; }
      |                  ~~~~~~^~~
kernel/apps/doom/libc_doom.c:114:36: warning: unused parameter ‘count’ [-Wunused-parameter]
  114 | int read(int fd, void *buf, size_t count) { return 0; }
      |                             ~~~~~~~^~~~~
kernel/apps/doom/libc_doom.c: In function ‘write’:
kernel/apps/doom/libc_doom.c:115:15: warning: unused parameter ‘fd’ [-Wunused-parameter]
  115 | int write(int fd, const void *buf, size_t count) {
      |           ~~~~^~
kernel/apps/doom/libc_doom.c:115:31: warning: unused parameter ‘buf’ [-Wunused-parameter]
  115 | int write(int fd, const void *buf, size_t count) {
      |                   ~~~~~~~~~~~~^~~
kernel/apps/doom/libc_doom.c: In function ‘mkdir’:
kernel/apps/doom/libc_doom.c:119:23: warning: unused parameter ‘pathname’ [-Wunused-parameter]
  119 | int mkdir(const char *pathname, int mode) { return -1; }
      |           ~~~~~~~~~~~~^~~~~~~~
kernel/apps/doom/libc_doom.c:119:37: warning: unused parameter ‘mode’ [-Wunused-parameter]
  119 | int mkdir(const char *pathname, int mode) { return -1; }
      |                                 ~~~~^~~~
kernel/apps/doom/libc_doom.c: In function ‘access’:
kernel/apps/doom/libc_doom.c:120:38: warning: unused parameter ‘mode’ [-Wunused-parameter]
  120 | int access(const char *pathname, int mode) {
      |                                  ~~~~^~~~
kernel/apps/doom/libc_doom.c: In function ‘stat’:
kernel/apps/doom/libc_doom.c:131:22: warning: unused parameter ‘path’ [-Wunused-parameter]
  131 | int stat(const char *path, struct stat *buf) { return -1; }
      |          ~~~~~~~~~~~~^~~~
kernel/apps/doom/libc_doom.c:131:41: warning: unused parameter ‘buf’ [-Wunused-parameter]
  131 | int stat(const char *path, struct stat *buf) { return -1; }
      |                            ~~~~~~~~~~~~~^~~
kernel/apps/doom/libc_doom.c: In function ‘fstat’:
kernel/apps/doom/libc_doom.c:132:15: warning: unused parameter ‘fd’ [-Wunused-parameter]
  132 | int fstat(int fd, struct stat *buf) { return -1; }
      |           ~~~~^~
kernel/apps/doom/libc_doom.c:132:32: warning: unused parameter ‘buf’ [-Wunused-parameter]
  132 | int fstat(int fd, struct stat *buf) { return -1; }
      |                   ~~~~~~~~~~~~~^~~
make: *** [Makefile:135: kernel/apps/doom/libc_doom.o] Error 1
